# urlshortener

./: Cargo.toml  config.toml
public/: 404.html  index.html
sql/: add_custom_redirect.sql  add_redirect.sql  check_password.sql  init_db.sql  query_redirect.sql
src/: config.rs  main.rs
src/models/: mod.rs  redirect.rs  shorten_payload.rs  user.rs
src/routes/: default.rs  index.rs  mod.rs  router.rs  shorten.rs
templates/: success.html
