[package]
name = "urlshortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
actix-web = "4.2.1"
actix-files = "0.6.2"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.9.1"
tera = "1.17.1"
log = "0.4.17"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
tokio-postgres = "0.7.7"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
derive_more = "0.99.17"
config = { version = "0.13.2", features = ["toml"] }
lazy_static = "1.4.0"
